# omrp

./: Cargo.toml  Dockerfile  README.md  TASKS.md  docker-compose.yml
.github/workflows/: ci.yml
crates/omrp-core/: Cargo.toml
crates/omrp-core/src/: caveman.rs  classifier.rs  ledger.rs  lib.rs  pipeline.rs  reducers.rs  router.rs  scorer.rs  state.rs
crates/omrp-core/src/rtk/: autodetect.rs  mod.rs
crates/omrp-core/src/rtk/filters/: build_output.rs  dedup_log.rs  find.rs  git_diff.rs  git_status.rs  grep.rs  ls.rs  mod.rs  smart_truncate.rs  tree.rs
crates/omrp-core/tests/: determinism.rs
crates/omrp-events/: Cargo.toml
crates/omrp-events/src/: error.rs  event.rs  lib.rs  validate.rs
crates/omrp-runtime/: Cargo.toml
crates/omrp-runtime/src/: auth.rs  config.rs  dashboard.rs  db.rs  keys.rs  main.rs  provider.rs  proxy.rs  routing.rs  server.rs  spa.html  validation.rs  web_server.rs
crates/omrp-types/: Cargo.toml
crates/omrp-types/src/: lib.rs  model.rs  routing.rs  task.rs  time.rs
docs/: ARCHITECTURE.md  DATABASE.md  EVENTS.md  PROVIDERS.md  ROUTING.md  WEB.md
docs/superpowers/plans/: 2026-05-30-omrp-phase1-kernel.md
docs/superpowers/specs/: 2026-05-30-llm-free-protocol-design.md  2026-05-30-omrp-execution-semantics.md  2026-05-30-omrp-kernel-spec.md
tests/: determinism.rs
