[workspace]
resolver = "2"
members = [
    "crates/omrp-types",
    "crates/omrp-events",
    "crates/omrp-core",
    "crates/omrp-runtime",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
ureq = "2"
toml = "0.8"
dirs = "5"
ratatui = "0.29"
crossterm = "0.28"
