[workspace]
resolver = "2"
members = [
    "crates/omrp-types",
    "crates/omrp-events",
    "crates/omrp-core",
    "crates/omrp-runtime",
]

[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
ureq = "2"
toml = "0.8"
dirs = "5"
ratatui = "0.29"
crossterm = "0.28"
# tiny_http removed — server.rs was deleted; axum is the sole HTTP layer

# ── New: async runtime + web framework ────────────────────────────────────────
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# ── New: database ─────────────────────────────────────────────────────────────
rusqlite = { version = "0.31", features = ["bundled"] }

# ── New: auth / crypto ────────────────────────────────────────────────────────
argon2   = "0.5"
jsonwebtoken = "9"
uuid     = { version = "1", features = ["v4"] }
rand     = "0.8"

# ── New: misc ────────────────────────────────────────────────────────────────
chrono       = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
bytes        = "1"
