[package]
name = "omrp-runtime"
version.workspace = true
edition.workspace = true
description = "OMRP CLI — deterministic LLM routing engine"

[[bin]]
name = "omrp"
path = "src/main.rs"

[dependencies]
omrp-types  = { path = "../omrp-types" }
omrp-events = { path = "../omrp-events" }
omrp-core   = { path = "../omrp-core" }
serde.workspace    = true
serde_json.workspace = true
ureq.workspace     = true
toml.workspace     = true
dirs.workspace     = true
ratatui.workspace  = true
crossterm.workspace = true
