[package]
name = "omrp-runtime"
version.workspace = true
edition.workspace = true
description = "OMRP CLI — deterministic LLM routing engine"

[[bin]]
name = "omrp"
path = "src/main.rs"

[dependencies]
omrp-types  = { path = "../omrp-types" }
omrp-events = { path = "../omrp-events" }
omrp-core   = { path = "../omrp-core" }
serde.workspace      = true
serde_json.workspace = true
sha2.workspace       = true
ureq.workspace       = true
toml.workspace       = true
dirs.workspace       = true
ratatui.workspace    = true
crossterm.workspace  = true
tiny_http.workspace  = true

# async runtime + web
tokio.workspace      = true
axum.workspace       = true
tower.workspace      = true
tower-http.workspace = true

# database
rusqlite.workspace   = true

# auth / crypto
argon2.workspace     = true
jsonwebtoken.workspace = true
uuid.workspace       = true
rand.workspace       = true

# misc
chrono.workspace       = true
tokio-stream.workspace = true
bytes.workspace        = true
